--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p> Será que, por gentileza, você poderia me dar um aumento??😭 </p>
 
     <div class="fundo">
-        <video src="GIF/STITCH.mp4" autoplay loop muted
+        <video src="STITCH.mp4" autoplay loop muted
         alt="FUNDO" class="fundo-gif">
     </div>
     
@@ -33,5 +33,6 @@
     <script src="index.js"></script>
 
 </body>
+
 
 </html>
