--- a/indexII.html
+++ b/indexII.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="fundo">
-        <video src="GIF/PARABENS.mp4" autoplay loop muted alt="fundo" class="fundo">
+        <video src="PARABENS.mp4" autoplay loop muted alt="fundo" class="fundo">
     </div>
 
     <H1> Congratulations!!! </H1>
@@ -32,4 +32,5 @@
     </div>
     
 </body>
+
 </html>
