--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         alt="FUNDO" class="fundo-gif">
     </div>
     
-    <div class="botões">
-
-        <button class="sim" id="sim" onclick="window.location.href='indexII.html'"> Claro meu funcionário preferido!🥳 </button>
-        <button class="nao" id="nao"> Não 😞 </button>
-
-
+     <div class="botões">
+        <a href="indexII.html">
+            <button class="sim" id="sim">Claro meu funcionário preferido!🥳</button>
+        </a>
+        <button class="nao" id="nao">Não 😞</button>
     </div>
 
     <div class="contador" id="contador">
@@ -36,3 +35,4 @@
 
 
 </html>
+
