--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
     </div>
     
      <div class="botões">
-        <a href="indexII.html">
-            <button class="sim" id="sim">Claro meu funcionário preferido!🥳</button>
-        </a>
-        <button class="nao" id="nao">Não 😞</button>
-    </div>
+    <button class="sim" id="sim">Claro meu funcionário preferido!🥳</button>
+    <button class="nao" id="nao" style="left:0; top:0;">Não 😞</button>
+</div>
 
     <div class="contador" id="contador">
         Vezes que meu chefe negou aumento: <span id="vezes">0</span>
@@ -35,4 +33,5 @@
 
 
 </html>
+
 
