--- a/index.html
+++ b/index.html
@@ -3,35 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> MELHOR DO ANO </title>
+    <title>MELHOR DO ANO</title>
     <link rel="stylesheet" href="index.css">
 </head>
-
 <body>
 
-    <H1> OLÁ, CHEFE! </H1>
-    <h2> FELIZ ANO NOVO!! 🎉🎉🥳</h2>
-    <p> Será que, por gentileza, você poderia me dar um aumento??😭 </p>
+    <h1>OLÁ, CHEFE!</h1>
+    <h2>FELIZ ANO NOVO!! 🎉🎉🥳</h2>
+    <p>Será que, por gentileza, você poderia me dar um aumento??😭</p>
 
+    <!-- Fundo com vídeo -->
     <div class="fundo">
-        <video src="STITCH.mp4" autoplay loop muted
-        alt="FUNDO" class="fundo-gif">
+        <video src="STITCH.mp4" autoplay loop muted class="fundo-gif"></video>
     </div>
-    
-     <div class="botões">
-    <button class="sim" id="sim">Claro meu funcionário preferido!🥳</button>
-    <button class="nao" id="nao" style="left:0; top:0;">Não 😞</button>
-</div>
 
+    <!-- Botões -->
+    <div class="botões">
+        <button class="sim" id="sim">Claro meu funcionário preferido!🥳</button>
+        <button class="nao" id="nao">Não 😞</button>
+    </div>
+
+    <!-- Contador -->
     <div class="contador" id="contador">
         Vezes que meu chefe negou aumento: <span id="vezes">0</span>
     </div>
 
     <script src="index.js"></script>
-
 </body>
-
-
 </html>
-
-
